--- a/RecruitConnect/package.json
+++ b/RecruitConnect/package.json
@@ -10,9 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-spring/web": "^9.7.4",
+    "lucide-react": "^0.417.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.25.1"
+    "react-router-dom": "^6.25.1",
+    "react-spring": "^9.7.4"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
