--- a/RecruitConnect/package.json
+++ b/RecruitConnect/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-spring/web": "^9.7.4",
+    "axios": "^1.7.2",
     "lucide-react": "^0.417.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
