--- a/RecruitConnect/package.json
+++ b/RecruitConnect/package.json
@@ -13,13 +13,17 @@
     "@react-spring/web": "^9.7.4",
     "axios": "^1.7.2",
     "chart.js": "^4.4.3",
-    "framer-motion": "^11.3.21",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.3.24",
     "lucide-react": "^0.417.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.0",
-    "react-spring": "^9.7.4"
+    "react-spring": "^9.7.4",
+    "tailwind-merge": "^2.4.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
