--- a/RecruitConnect/package.json
+++ b/RecruitConnect/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.6.0",
     "@react-spring/web": "^9.7.4",
     "axios": "^1.7.2",
     "chart.js": "^4.4.3",
@@ -20,13 +21,12 @@
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
-
+    "react-icons": "^5.2.1",
     "react-router-dom": "^6.26.0",
     "react-spring": "^9.7.4",
+    "react-toastify": "^10.0.5",
     "tailwind-merge": "^2.4.0",
-    "tailwindcss-animate": "^1.0.7",
-    "react-icons": "^5.2.1",
-    "react-toastify": "^10.0.5"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
