--- a/RecruitConnect/package.json
+++ b/RecruitConnect/package.json
@@ -10,7 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
     "@fortawesome/fontawesome-free": "^6.6.0",
+    "@mui/material": "^5.16.7",
     "@react-spring/web": "^9.7.4",
     "axios": "^1.7.2",
     "chart.js": "^4.4.3",
