--- a/RecruitConnect/package.json
+++ b/RecruitConnect/package.json
@@ -25,6 +25,7 @@
     "cors": "^2.8.5",
     "framer-motion": "^11.3.24",
     "lucide-react": "^0.417.0",
+    "notyf": "^3.10.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
